# k8s-device-plugin-rs

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  mise.toml  tombi.toml
.claude/: settings.json
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: device.rs  health.rs  lib.rs  permissions.rs  test_util.rs
example/: Cargo.toml  Dockerfile  README.md
example/k8s/: daemonset.yaml  kustomization.yaml  namespace.yaml
example/src/: main.rs
lib/: Cargo.toml
lib/examples/: example_plugin.rs  example_plugin_with_metrics.rs  static_device_plugin.rs
lib/src/: health.rs  lib.rs  permissions.rs  registration.rs  static_plugin.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
src/: lib.rs
test/: Cargo.toml
test/src/: device_plugin.rs  lib.rs  registration.rs
