[package]
name = "k8s-device-plugin"
version = "0.1.0"
edition = "2024"


[workspace]
resolver = "3"
members = ["proto"]


[workspace.package]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/imp/k8s-device-plugin-rs"


[dependencies]
prost = "0.14"
tokio = {
  version = "1.52",
  features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
  ]
}
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-prost = "0.14"


[build-dependencies]
tonic-prost-build = "0.14"
