[workspace]
resolver = "3"
members = ["core", "lib", "proto"]


[workspace.package]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/imp/k8s-device-plugin-rs"


[workspace.dependencies]
prost = "0.14"
tokio = { version = "1.52", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

k8s-device-plugin-core = { path = "core" }
k8s-device-plugin-lib = { path = "lib" }
k8s-device-plugin-proto = { path = "proto" }
