[workspace]
resolver = "3"
members = ["core", "lib", "proto", "test"]


[workspace.package]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/imp/k8s-device-plugin-rs"


[workspace.dependencies]
async-trait = "0.1"
hyper-util = "0.1"
prost = "0.14"
tempfile = "3.27"
tokio = { version = "1.52", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"

k8s-device-plugin-core = { path = "core" }
k8s-device-plugin-lib = { path = "lib" }
k8s-device-plugin-proto = { path = "proto" }
k8s-device-plugin-test = { path = "test" }


[workspace.lints.clippy]
large_futures = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
redundant_type_annotations = "warn"
unused_async = "warn"
use_self = "warn"


[workspace.lints.rust]
deprecated_in_future = "warn"
future_incompatible = "warn"
# unreachable_pub = "warn"
missing_debug_implementations = "warn"
# non_exhaustive_omitted_patterns = "warn"
noop_method_call = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused = "warn"
# unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
# warnings = "deny"
