[package]
name = "k8s-device-plugin-core"
version.workspace = true
edition.workspace = true
repository.workspace = true


[dependencies]
async-trait.workspace = true
thiserror.workspace = true


[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }


[features]
# Exposes test_util::StaticPlugin for downstream crates' tests to reuse
# instead of maintaining their own copy of the same test double.
test-util = []


[lints]
workspace = true
