[package]
name = "k8s-device-plugin-example"
version.workspace = true
edition.workspace = true
repository.workspace = true


[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true

k8s-device-plugin-lib.workspace = true


[lints]
workspace = true
