[package]
name = "k8s-device-plugin-lib"
version.workspace = true
edition.workspace = true
repository.workspace = true


[dependencies]
hyper-util.workspace = true
tokio = { workspace = true, features = ["time"] }
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true

k8s-device-plugin-core.workspace = true
k8s-device-plugin-proto.workspace = true


[dev-dependencies]
k8s-device-plugin-core = { workspace = true, features = ["test-util"] }
k8s-device-plugin-test.workspace = true
prometheus_exporter.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing-subscriber.workspace = true


[lints]
workspace = true
