[package]
name = "k8s-device-plugin-proto"
version.workspace = true
edition.workspace = true
repository.workspace = true


[dependencies]
prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true


[build-dependencies]
tonic-prost-build.workspace = true

# [lints]
# workspace = true
